# libwebgpu

./: .gitignore  CMakeLists.txt  README.md  README.windows.md  THANKS.md  TestApplication.cpp  TestApplication.h  conanfile.py  main.cpp
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/: Adapter.h  Application.h  Device.h  StringView.h  WebGpuInstance.h  Window.h
resources/: camera_shader.wgsl  input.config  settings.config  shader.wgsl
src/: Adapter.cpp  Adapter.h  Application.cpp  Application.h  ApplicationImpl.cpp  ApplicationImpl.h  Device.cpp  Device.h  StringView.cpp  Util.h  WebGpuInstance.cpp  WebGpuInstance.h  Window.cpp  Window.h
src/ecs/: SmoothedSystem.cpp  SmoothedSystem.h  System.cpp  System.h
src/event/: EventConsumer.cpp  EventConsumer.h  EventManager.cpp  EventManager.h
src/game/: Console.cpp  Console.h  TickGroup.cpp  TickGroup.h  TickableObject.cpp  TickableObject.h
src/input/: Action.cpp  Action.h  ActionEvent.cpp  ActionEvent.h  Axis.cpp  Axis.h  AxisEvent.cpp  AxisEvent.h  Controller.cpp  Controller.h  InputConsumer.cpp  InputConsumer.h  InputManager.cpp  InputManager.h  InputTick.cpp  InputTick.h  KeyMap.cpp  KeyMap.h
src/physics/: PhysicsObject.cpp  PhysicsObject.h  Player.cpp  Player.h
src/resource/: GltfResource.cpp  GltfResource.h  Loader.cpp  Loader.h  RawResource.cpp  RawResource.h  Resource.cpp  Resource.h  Settings.cpp  Settings.h  StbImage.cpp  StringResource.cpp  StringResource.h
src/webgpu/: Adapter.cpp  Adapter.h  BasePass.cpp  BasePass.h  BindGroup.cpp  BindGroup.h  BindGroupLayout.cpp  BindGroupLayout.h  Camera.cpp  Camera.h  ComputePass.cpp  ComputePass.h  DepthTextureView.cpp  DepthTextureView.h  Device.cpp  Device.h  Frame.cpp  Frame.h  GLTypes.h  GpuBuffer.cpp  GpuBuffer.h  GpuData.cpp  GpuData.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  MaterialManager.cpp  MaterialManager.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Pipeline.cpp  Pipeline.h  RenderManager.cpp  RenderManager.h  RenderPass.cpp  RenderPass.h  RenderTargetTextureView.cpp  (+20 more)
test/: CMakeLists.txt
test/src/: webgpu_test.cpp
test/src/resource/: SettingsTest.cpp
